syntax = "proto3";

package proto;

enum RegisterType {
    Cache = 0;
    ETCD = 1;
}

enum Protocol {
    LOCAL = 0;
    HTTP = 1;
    GRPC = 2;
}

// Service 基础服务信息
message Service {
    string name = 1;
    string version = 2;
}

// message RegistOption {
//    string name = 1;
//    string version = 2;
//    string protocol = 3;
//    string domain = 4;
//    uint32 weight = 5;
//    map<string, string> metadata = 6;
// }

message Payload {
    string trace_id = 1;
    string trace_ip = 2;
    string id = 3;
    Service Service = 4;
    string topic = 5;
    map<string, string> header = 6;
    bytes req_body = 7;
}

message Callback {
    bytes body = 1;
}

service RPCService {
    rpc Call (Payload) returns (Callback);
}
